subprojects/swen430/src/test/resources/tests/valid/ListAssign_Valid_12.while
void main() {
    {[[int]] f} r = {f: [[0, 1]]};
    r.f[0][1] = 2;
    print r;
}
