subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_15.while
int f([int] xs) {
    xs[0] = 1.0;
    return xs[0];
}